network-policy/examples/p1-deny-ingress-to-pod.yaml
# This is the Pod the Network Policy’s Ingress and Egress rules will apply to.
# Because the Ingress and Egress policy types are set but no further rules are added,
# the policy will block all network traffic to and from the Pod.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: p1-deny-ingress-to-pod
  namespace: p1
spec:
  podSelector:
    matchLabels:
      app: nginx-1
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: p1-deny-ingress-to-pod
#   namespace: p1
# spec:
#   podSelector:
#     matchLabels:
#       app: nginx-1
#   policyTypes:
#     - Ingress
